--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -12,22 +12,42 @@
         android:id="@+id/start_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#3B426C">
+        android:background="@color/yellow_100">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:text="Quiz!"
+            android:textSize="50sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/button_start"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/button_start"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="304dp"
+            android:background="?android:attr/textSelectHandleLeft"
+            android:backgroundTint="#DC3535"
+            android:fontFamily="sans-serif"
             android:padding="32dp"
             android:text="@string/button_start"
+            android:textColorLink="#DF5B5B"
             android:textSize="33sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:rippleColor="#B64747" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
