--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,14 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <style name="Theme.Quiz" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorOnPrimary">@color/black</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="android:windowTranslucentStatus">false</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
 
     <style name="Theme.Quiz.First" parent="Theme.Quiz">
         <item name="colorPrimary">@color/deep_orange_100</item>
         <item name="colorPrimaryDark">@color/deep_orange_100_dark</item>
-        <item name="android:windowTranslucentStatus">true</item>
         <item name="colorPrimaryVariant">@color/deep_orange_100_dark</item>
         <item name="colorSecondary">@color/deep_orange_100</item>
         <item name="colorSecondaryVariant">@color/deep_orange_100_light</item>
@@ -17,49 +18,43 @@
     </style>
 
     <style name="Theme.Quiz.Second" parent="Theme.Quiz">
-        <item name="colorPrimary">@color/yellow_100</item>
-        <item name="colorPrimaryDark">@color/yellow_100_dark</item>
-        <item name="colorPrimaryVariant">@color/yellow_100_dark</item>
-        <item name="colorSecondary">@color/yellow_100</item>
-        <item name="colorSecondaryVariant">@color/yellow_100_light</item>
-        <item name="android:windowTranslucentStatus">true</item>
+        <item name="colorPrimary">#8BCA33</item>
+        <item name="colorPrimaryDark">#6B9900</item>
+        <item name="colorPrimaryVariant">#A1FD67</item>
+        <item name="colorSecondary">#739E24</item>
+        <item name="colorSecondaryVariant">#9ED256</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/yellow_100_dark</item>
+        <item name="android:statusBarColor">#8c9900</item>
     </style>
 
     <style name="Theme.Quiz.Three" parent="Theme.Quiz">
-        <item name="colorPrimary">@android:color/holo_purple</item>
-        <item name="colorPrimaryDark">@color/design_default_color_primary</item>
-        <item name="colorPrimaryVariant">@color/ic_smile3_background</item>
-        <item name="colorSecondary">#D500F9</item>
-        <item name="colorSecondaryVariant">@color/yellow_100_light</item>
-        <item name="android:windowTranslucentStatus">true</item>
+        <item name="colorPrimary">#ba68c8</item>
+        <item name="colorPrimaryVariant">#ee98fb</item>
+        <item name="colorPrimaryDark">#883997</item>
+        <item name="colorSecondary">#691b99</item>
+        <item name="colorSecondaryVariant">#9b4dcb</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">#FF1744</item>
+        <item name="android:statusBarColor">#883997</item>
     </style>
 
     <style name="Theme.Quiz.Fourth" parent="Theme.Quiz">
-        <item name="colorPrimary">#DA5656</item>
-        <item name="colorPrimaryDark">#BA3D3D</item>
-        <item name="colorPrimaryVariant">@color/ic_smile3_background</item>
-        <item name="colorSecondary">#FF1744</item>
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="colorSecondaryVariant">@color/yellow_100_light</item>
+        <item name="colorPrimary">#f4511e</item>
+        <item name="colorPrimaryDark">#b91400</item>
+        <item name="colorPrimaryVariant">#ff844c</item>
+        <item name="colorSecondary">#bf360c</item>
+        <item name="colorSecondaryVariant">#f9683a</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">#FF1744</item>
+        <item name="android:statusBarColor">#b91400</item>
     </style>
 
     <style name="Theme.Quiz.Fifth" parent="Theme.Quiz">
-        <item name="colorPrimary">#61D7E4</item>
-        <item name="colorPrimaryDark">#61B0E4</item>
-        <item name="colorPrimaryVariant">@color/ic_smile3_background</item>
-        <item name="colorSecondary">#00E5FF</item>
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="colorSecondaryVariant">@color/yellow_100_light</item>
+        <item name="colorPrimary">#e57373</item>
+        <item name="colorPrimaryVariant">#ffa4a2</item>
+        <item name="colorPrimaryDark">#af4448</item>
+        <item name="colorSecondary">#d32f2f</item>
+        <item name="colorSecondaryVariant">#ff6659</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">#FF1744</item>
+        <item name="android:statusBarColor">#af4448</item>
     </style>
-
-
 
 </resources>
